cabal-version:       2.0
name:                finkel-lang
version:             0.17.0.0
synopsis:            Finkel language core
description:
  Finkel language core macros and functions
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2020 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/Finkel/*.fnk
                     src/Finkel/Core/*.fnk
                     test/*.fnk

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.3
                     , GHC == 8.6.4
                     , GHC == 8.8.1

custom-setup
  setup-depends:       base         >= 4.10 && < 5
                     , Cabal        >= 2.0  && < 3.1
                     , finkel-setup >= 0.1  && < 1

library
  hs-source-dirs:      src
  exposed-modules:     Paths_finkel_lang
                       Finkel.Core.Error
                       Finkel.Core.List
                       Finkel.Core
                       Finkel.Prelude
  autogen-modules:     Paths_finkel_lang
  reexported-modules:  Language.Finkel
  build-depends:       base          >= 4.7    && < 5
                     , ghc           >= 8.2.0  && < 8.10.0
                     , finkel-kernel >= 0.28.0 && < 1
  build-tool-depends:  fkc:fkc >= 0.1 && < 1
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite finkel-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghc
                     , finkel-lang
                     , finkel-kernel
                     --
                     , QuickCheck >= 2.10.1 && < 2.14
                     , directory  >= 1.3.0  && < 1.4
                     , hspec      >= 2.4.8  && < 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Orphan
                       CoreTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   lang
