name:                sk-lang
version:             0.11.0.0
synopsis:            SK language core and executable.
description:         SK language core functions and macros, with
                     executable for compiling and running REPL.
homepage:            https://github.com/githubuser/sk-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017, 2018 Author name here
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/SK/*.sk
                     src/SK/Core/*.sk
                     src/SK/Repl/*.sk
                     test/*.sk
cabal-version:       2.0

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.3
                     , GHC == 8.6.2

custom-setup
  setup-depends:       base      >= 4.7 && < 5
                     , Cabal     >= 2.0
                     , sk-kernel >= 0.22

library
  hs-source-dirs:      src
  exposed-modules:     Paths_sk_lang
                       SK.Core.List
                       SK.Core
                       SK.Prelude
                       SK.Repl.Types
                       SK.Repl.IO
                       SK.Repl.Listen
                       SK.Repl.Loop
                       SK.Repl.Macro
                       SK.Repl
                       SK.Version
                       SK.Main
                       SK.Setup
  autogen-modules:     Paths_sk_lang
  reexported-modules:  Language.SK
  build-depends:       base         >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , haskeline
                     , ghc
                     , ghc-boot
                     , ghci
                     , network
                     , process
                     , transformers
                     , sk-kernel    >= 0.19.0
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite sk-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , directory
                     , ghc
                     , hspec
                     , sk-lang
                     , sk-kernel
  ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Orphan
                       CoreTest
                       ReplTest
  default-language:    Haskell2010

-- SK executable. Compiling with `-dynamic' option makes REPL start
-- up time a bit faster.
executable sk
  hs-source-dirs:      exec
  main-is:             sk.hs
  ghc-options:         -dynamic -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.10 && < 5
                     , sk-lang
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-lang
