cabal-version:       2.0
name:                sk-lang
version:             0.15.0.0
synopsis:            SK language core
description:         SK language core macros and functions.
homepage:            https://github.com/githubuser/sk-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017, 2018 Author name here
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     src/SK/*.sk
                     src/SK/Core/*.sk
                     test/*.sk

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.3
                     , GHC == 8.6.4

custom-setup
  setup-depends:       base     >= 4.7 && < 5
                     , Cabal    >= 2.0
                     , sk-setup >= 0.1

library
  hs-source-dirs:      src
  exposed-modules:     Paths_sk_lang
                       SK.Core.Error
                       SK.Core.List
                       SK.Core
                       SK.Prelude
  autogen-modules:     Paths_sk_lang
  reexported-modules:  Language.SK
  build-depends:       base         >= 4.7 && < 5
                     , ghc
                     , sk-kernel    >= 0.27.0
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite sk-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , directory
                     , ghc
                     , hspec
                     , sk-lang
                     , sk-kernel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Orphan
                       CoreTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk-lang
