cabal-version:       2.0
name:                finkel-setup
version:             0.1.0.0
synopsis:            Cabal setup script helper for Finkel
description:
  Cabal setup script helper for Finkel
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2020 8c6794b6
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     test/data/p01/LICENSE
                     test/data/p01/p01.cabal
                     test/data/p01/Setup.hs
                     test/data/p01/exec/p01.hs
                     test/data/p01/src/P01/*.hs
                     test/data/p01/src/P01/*.fnk
                     test/data/p01/test/*.hs

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.4
                     , GHC == 8.6.4
                     , GHC == 8.8.1
                     , GHC == 8.10.2

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Simple.Finkel
  build-depends:       Cabal     >= 2.0   && < 3.3
                     , base      >= 4.10  && < 5
                     , directory >= 1.3.0 && < 1.4
                     , filepath  >= 1.4.1 && < 1.5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite finkel-setup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , finkel-kernel
                     , finkel-setup
                       --
                     , ghc           >= 8.2.0 && < 8.11.0
                     , process       >= 1.6.1 && < 1.7
                     , hspec         >= 2.4.8 && < 2.8
  build-tool-depends:  fkc:fkc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   setup
