cabal-version:       2.0
name:                sk-setup
version:             0.1.0.0
synopsis:            Cabal setup script helper for sk
description:         Cabal setup script helper for sk
homepage:            https://github.com/githubuser/sk/setup#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          example@example.com
copyright:           2019 8c6794b6
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     test/data/p01/LICENSE
                     test/data/p01/p01.cabal
                     test/data/p01/Setup.hs
                     test/data/p01/exec/p01.hs
                     test/data/p01/src/P01/*.hs
                     test/data/p01/src/P01/*.sk
                     test/data/p01/test/*.hs

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.4
                     , GHC == 8.6.4
                     , GHC == 8.8.1

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Simple.SK
  build-depends:       Cabal     >= 2.0
                     , base      >= 4.10 && < 5
                     , filepath  >= 1.4.1
                     , directory >= 1.3.0
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite sk-setup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , filepath
                     , directory
                     , ghc
                     , hspec
                     , process
                     , sk-kernel
                     , sk-setup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sk
