cabal-version:       2.0
name:                finkel-tool
version:             0.17.0.0
synopsis:            Finkel tool
description:         Finkel tool
homepage:            https://github.com/finkel-lang/tool#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          example@example.com
copyright:           2017-2020 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     finkel.hsfiles
                     src/Finkel/Tool/*.fnk
                     src/Finkel/Tool/Repl/*.fnk
                     test/*.fnk
                     test/data/*.fnk
                     test/data/input01.txt
                     test/data/p02/LICENSE
                     test/data/p02/Setup.hs
                     test/data/p02/p02.cabal
                     test/data/p02/exec/p02.hs
                     test/data/p02/src/P02/A.fnk
                     test/data/p02/test/Spec.hs

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.3
                     , GHC == 8.6.4
                     , GHC == 8.8.1

custom-setup
  setup-depends:       base         >= 4.7 && < 5
                     , Cabal        >= 2.0
                     , finkel-setup >= 0.1

library
  hs-source-dirs:      src
  exposed-modules:     Finkel.Tool.Compat
                       Finkel.Tool.CLI
                       Finkel.Tool.Help
                       Finkel.Tool.Repl.Types
                       Finkel.Tool.Repl.IO
                       Finkel.Tool.Repl.Listen
                       Finkel.Tool.Repl.Eval
                       Finkel.Tool.Repl.Loop
                       Finkel.Tool.Repl.Macro
                       Finkel.Tool.Repl
                       Finkel.Tool.Version
                       Finkel.Tool.Main
                       Finkel.Setup
  build-depends:       base         >= 4.7 && < 5
                     , bytestring
                     , directory
                     , haskeline
                     , ghc
                     , ghc-boot
                     , ghci
                     , network
                     , process
                     , transformers
                     , finkel-kernel >= 0.28
                     , finkel-lang   >= 0.15
                     , finkel-setup  >= 0.1
  default-language:    Haskell2010
  ghc-options:       -Wall

flag dynamic
  description:         Dynamically link executables
  default:             True
  manual:              True

test-suite finkel-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , directory
                     , filepath
                     , ghc
                     , haskeline
                     , hspec
                     , network
                     , process
                     , finkel-lang
                     , finkel-kernel
                     , finkel-tool
  if flag(dynamic)
    ghc-options:       -dynamic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CLITest
                       CompatTest
                       MainTest
                       ReplTest
                       ReplMacroTest
                       SetupTest
                       TestAux
  default-language:    Haskell2010

executable finkel
  hs-source-dirs:      exec
  main-is:             finkel.hs
  if flag(dynamic)
    ghc-options:       -dynamic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.10 && < 5
                     , finkel-tool
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/tool
