cabal-version:       2.0
name:                finkel-tool
version:             0.17.0.0
synopsis:            Finkel tool
description:
  Finkel tool
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2020 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     finkel.hsfiles
                     src/Finkel/Tool/*.fnk
                     src/Finkel/Tool/Repl/*.fnk
                     test/*.fnk
                     test/data/*.fnk
                     test/data/input01.txt
                     test/data/p02/LICENSE
                     test/data/p02/Setup.hs
                     test/data/p02/p02.cabal
                     test/data/p02/exec/p02.hs
                     test/data/p02/src/P02/A.fnk
                     test/data/p02/test/Spec.hs

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.3
                     , GHC == 8.6.4
                     , GHC == 8.8.1

custom-setup
  setup-depends:       base         >= 4.7 && < 5
                     , Cabal        >= 2.0 && < 3.1
                     , finkel-setup >= 0.1

library
  hs-source-dirs:      src
  exposed-modules:     Finkel.Tool.Compat
                       Finkel.Tool.CLI
                       Finkel.Tool.Help
                       Finkel.Tool.Repl.Types
                       Finkel.Tool.Repl.IO
                       Finkel.Tool.Repl.Listen
                       Finkel.Tool.Repl.Eval
                       Finkel.Tool.Repl.Loop
                       Finkel.Tool.Repl.Macro
                       Finkel.Tool.Repl
                       Finkel.Tool.Version
                       Finkel.Tool.Main
                       Finkel.Setup
  build-depends:       base          >= 4.7    && < 5
                     , bytestring    >= 0.10.8 && < 0.11
                     , directory     >= 1.3.0  && < 1.4
                     , haskeline     >= 0.7.4  && < 0.8
                     , ghc           >= 8.2.0  && < 8.10.0
                     , ghc-boot      >= 8.2.0  && < 8.10.0
                     , ghci          >= 8.2.0  && < 8.10.0
                     , network       >= 2.6.3  && < 3.2
                     , process       >= 1.6.1  && < 1.7
                     , transformers  >= 0.5.2  && < 0.5.7
                     , finkel-kernel >= 0.28   && < 1
                     , finkel-lang   >= 0.15   && < 1
                     , finkel-setup  >= 0.1    && < 1
  default-language:    Haskell2010
  ghc-options:       -Wall

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

test-suite finkel-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , ghc
                     , haskeline
                     , network
                     , process
                     , finkel-lang
                     , finkel-kernel
                     , finkel-tool
                     --
                     , filepath   >= 1.4.1  && < 1.5
                     , hspec      >= 2.4.8  && < 2.8
                     , QuickCheck >= 2.10.1 && < 2.14
  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CLITest
                       CompatTest
                       MainTest
                       ReplTest
                       ReplMacroTest
                       SetupTest
                       TestAux
  default-language:    Haskell2010

executable finkel
  hs-source-dirs:      exec
  main-is:             finkel.hs
  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , finkel-tool
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel
