name:                my-new-package
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://www.example.org
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Data
build-type:          Custom
extra-source-files:  README.md
                     src/*.fnk
cabal-version:       >=2.0

custom-setup
  setup-depends:       base >= 4.7 && < 5
                     , Cabal >= 2.0
                     , finkel-setup

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  build-tool-depends:  finkel:finkel
  default-language:    Haskell2010

executable my-new-package
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-new-package
  default-language:    Haskell2010

test-suite my-new-package-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , my-new-package
  build-tool-depends:  finkel:finkel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/my-new-package
